--- a/_posts/2017-03-16-j-plot-style.html
+++ b/_posts/2017-03-16-j-plot-style.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Plot Style"
+title:  "Plot Types"
 date:   2017-03-16 12:00:00 +0900
 author: yunskim
 categories: j-language plot
