--- a/_posts/2017-03-16-j-plot-style.html
+++ b/_posts/2017-03-16-j-plot-style.html
@@ -6,3 +6,11 @@ author: yunskim
 categories: j-language plot
 permalink: /:categories/:year/:month/:day/:title/
 ---
+<section>
+plot 패키지의 여러 타입을 알아봅시다.
+</section>
+
+<section>
+	<h2>surface</h2>
+	<p>3차원 데이터를 그릴 때 도움이 되는 surface형태입니다.</p>
+</section>
