--- a/_posts/2017-03-16-j-plot-style.html
+++ b/_posts/2017-03-16-j-plot-style.html
@@ -6,8 +6,9 @@ author: yunskim
 categories: j-language plot
 permalink: /:categories/:year/:month/:day/:title/
 ---
+
 <section>
-plot 패키지의 여러 타입을 알아봅시다.
+	<p>plot 패키지의 여러 타입을 알아봅시다.</p>
 </section>
 
 <section>
