--- a/_posts/2017-03-16-j-plot-style.html
+++ b/_posts/2017-03-16-j-plot-style.html
@@ -12,6 +12,23 @@ permalink: /:categories/:year/:month/:day/:title/
 </section>
 
 <section>
-	<h2>surface</h2>
-	<p>3차원 데이터를 그릴 때 도움이 되는 surface형태입니다.</p>
+	<h2>Surface</h2>
+	<p><label for="surface-figure" class="margin-toggle">&#8853;</label><input type="checkbox" id="surface-figure" class="margin-toggle"/><span class="marginnote"><img src="{{site.baseurl}}/assets/img/j-language/plot/surface.png"  alt="Image of Surface Plot"/>$$ z = x^2 - y^2 $$</span>3차원 데이터를 그릴 때 도움이 되는 <code>surface</code>타입입니다. 3차원 그래프의 기본타입으로 지정되어 있습니다. 따로 타입을 정하지 않는다면 <code>surface</code>플롯을 그립니다.</p>
+
+	<p><code>surface</code>타입은 3차원 그래프에서만 지원됩니다.</p>
+	
+	<pre class="code">
+require 'plot numeric'
+X =: Y =: steps _4 4 8
+Z =: X -&*:/ Y
+BGC_z_ =: 255 255 248 NB. plot 배경색, 꼭 namespace를 _z_로 지정하세요.
+'type surface; boxed 0; mesh 0; backcolor BGC' plot X ; Y ; Z
+	</pre>
 </section>
+
+<section>
+	<h2>Wire</h2>
+	<p>
+</section>
+
+	
