--- a/_posts/2017-03-16-j-plot-style.html
+++ b/_posts/2017-03-16-j-plot-style.html
@@ -4,11 +4,11 @@ title:  "Plot Types"
 date:   2017-03-16 12:00:00 +0900
 author: yunskim
 categories: j-language plot
-permalink: /:categories/:year/:month/:day/:title/
+permalink: /:categories/:title/
 ---
 
 <section>
-	<p>plot 패키지의 여러 타입을 알아봅시다.</p>
+	<p>plot 패키지의 여러 타입을 알아봅시다. <a href="http://code.jsoftware.com/wiki/Plot/Types">공식 사이트</a>에서 상세한 내용을 찾을 수 있습니다.</p>
 </section>
 
 <section>
