--- a/_posts/jlang/plot/2017-03-16-types.html
+++ b/_posts/jlang/plot/2017-03-16-types.html
@@ -12,8 +12,33 @@ permalink: /:categories/:title/
 </section>
 
 <section>
+	<h2>Area</h2>
+	<p><label for="area-basic-figure" class="margin-toggle">&#8853;</label><input type="checkbox" id="wire-basic-figure" class="margin-toggle"/><span class="marginnote"><img src="{{site.baseurl}}/assets/img/jlang/plot/area-basic.png"  alt="Image of Basic Area Plot"/>기본 컬러코드를 사용하는 대신 <a href="http://colorbrewer2.org/#type=sequential&scheme=OrRd&n=9">http://colorbrewer2.org</a>에서 가져온 컬러코드를 사용합니다.</span>데이터의 차이나 변화량을 알아보고 싶을 때 도움이 되는 <code>area</code>타입입니다. <code>matrix</code>를 데이터 타입으로 다음 행과의 차이를 면적으로 표현합니다.</p>
+
+	<p><code>area</code>타입은 2차원 그래프에서만 지원됩니다.</p>
+	<pre class="code">
+require 'plot'
+MYCOLORS_z_ =: |. (".;._2) 0 : 0
+255 247 236
+254 232 200
+253 212 158
+253 187 132
+252 141  89
+239 101  72
+215  48  31
+179   0   0
+127   0   0
+)
+BGC_z_ =: 255 255 248
+'type area; color MYCOLORS; backcolor BGC' plot i. _9 20
+	</pre>
+
+	<h3>응용: streamgraph</h3>
+</section>
+
+<section>
 	<h2>Surface</h2>
-	<p><label for="surface-figure" class="margin-toggle">&#8853;</label><input type="checkbox" id="surface-figure" class="margin-toggle"/><span class="marginnote"><img src="{{site.baseurl}}/assets/img/j-language/plot/surface.png"  alt="Image of Surface Plot"/>$$ z = x^2 - y^2 $$</span>3차원 데이터를 그릴 때 도움이 되는 <code>surface</code>타입입니다. 3차원 그래프의 기본타입으로 지정되어 있습니다. 따로 타입을 정하지 않는다면 <code>surface</code>플롯을 그립니다.</p>
+	<p><label for="surface-figure" class="margin-toggle">&#8853;</label><input type="checkbox" id="surface-figure" class="margin-toggle"/><span class="marginnote"><img src="{{site.baseurl}}/assets/img/jlang/plot/surface.png"  alt="Image of Surface Plot"/>$$ z = x^2 - y^2. $$</span>3차원 데이터를 그릴 때 도움이 되는 <code>surface</code>타입입니다. 3차원 그래프의 기본타입으로 지정되어 있습니다. 따로 타입을 정하지 않는다면 <code>surface</code>플롯을 그립니다.</p>
 
 	<p><code>surface</code>타입은 3차원 그래프에서만 지원됩니다.</p>
 	
@@ -26,9 +51,5 @@ BGC_z_ =: 255 255 248 NB. plot 배경색, 꼭 locale을 _z_로 지정하세요.
 	</pre>
 </section>
 
-<section>
-	<h2>Wire</h2>
-	<p>
-</section>
 
 	
