surface-density.png 수정

--- a/_posts/jlang/plot/2017-03-16-types.html
+++ b/_posts/jlang/plot/2017-03-16-types.html
@@ -300,6 +300,7 @@ X =: steps _4 4 8
 dat =: (; (; -&*:/~)) X
 
 pd 'reset'
+pd 'backcolor BC'
 
 pd 'new 30 200 480 900' NB. bottom x, bottom y, top x, top y
 pd 'type surface'
@@ -314,6 +315,7 @@ pd 'backcolor BC'
 pd 'noaxes'
 pd 'aspect 1'
 pd dat
+
 pd 'show'
 	</pre>
 </section>
