--- a/_posts/jlang/plot/2017-03-16-types.html
+++ b/_posts/jlang/plot/2017-03-16-types.html
@@ -277,8 +277,10 @@ pd 'show'
 <section>
 	<h2>Density</h2>
 	<p>3차원 데이터를 2차원에 표현하는 여러 방법 중 하나로 색상에 따라 값의 크기를 짐작할 수 있는 그래프입니다.</p>
+
+	<p>아래에 \( z = x^2 - y^2 \) 그래프를 <code>surface</code>와 <code>density</code> 두가지 방법으로 그려보았습니다.</p>
 	<figure>
-        <label for="surface-density-figure" class="margin-toggle">&#8853;</label><input type="checkbox" id="surface-density-figure" class="margin-toggle"/><span class="marginnote">\( z = x^2 - y^2 \) 그래프를 <code>surface</code>와 <code>density</code> 두가지 방법으로 그려보았습니다.</span>
+        <label for="surface-density-figure" class="margin-toggle">&#8853;</label><input type="checkbox" id="surface-density-figure" class="margin-toggle"/><span class="marginnote"></span>
         <img src="{{site.baseurl}}/assets/img/jlang/plot/surface-density.png" alt="Image of Surface and Density Plot"/>
     </figure>
 	<pre class="code">
@@ -354,6 +356,29 @@ pd 'show'
 	<p>아버지 키와 아들 키 간의 관계가 잘 보이십니까? 골턴의 연구는 정묘한 수학적 증명으로 이어지지는 못했지만 많은 사람들에게 특히 회귀분석을 접하는 사람들에게 많은 영감을 주고 있습니다.</p>
 </section>
 
+<section>
+	<h2>Errorbar</h2>
+	<p><label for="errorbar-figure" class="margin-toggle">&#8853;</label><input type="checkbox" id="errorbar-figure" class="margin-toggle"/><span class="marginnote"><img src="{{site.baseurl}}/assets/img/jlang/plot/errorbar.png"  alt="Image of Errorbar Plot"/></span><code>errorbar</code> 차트는 3개의 행을 입력으로 받습니다. <code>hi</code>, <code>mid</code> 그리고 <code>low</code>행이 차례로 <code>errorbar</code>의 입력을 구성합니다. <code>mid</code>는 <code>line</code>으로 표시되고 <code>hi</code>와 <code>lo</code>는 가로 방향 선분으로 표시되어 <code>hi</code>와 <code>lo</code>가 얼마나 차이나는지 알 수 있게 합니다.</p>
+	<pre class="code">
+require 'plot numeric'
+
+mid=. _5 + (?21#10) + 10*sin steps 0 3 20
+hi=. mid+0.5+?21#5
+lo=. mid-0.5+?21#5
+
+pd 'reset'
+pd 'color 35 139 69'
+pd 'backcolor 255 255 248'
+pd 'type errorbar'
+pd 'pensize 3'
+pd  hi,mid,:lo
+pd 'show'
+	</pre>
+</section>
+<section>
+	<h2>Hilo</h2>
+	<p><code>hilo</code>차트는 </p>
+</section>
 <section>
 	<h2>Surface</h2>
 	<p><label for="surface-figure" class="margin-toggle">&#8853;</label><input type="checkbox" id="surface-figure" class="margin-toggle"/><span class="marginnote"><img src="{{site.baseurl}}/assets/img/jlang/plot/surface.png"  alt="Image of Surface Plot"/>$$ z = x^2 - y^2. $$</span>3차원 데이터를 그릴 때 도움이 되는 <code>surface</code>타입입니다. 3차원 그래프의 기본타입으로 지정되어 있습니다. 따로 타입을 정하지 않는다면 <code>surface</code>플롯을 그립니다.</p>
