--- a/_posts/jlang/plot/2017-03-16-types.html
+++ b/_posts/jlang/plot/2017-03-16-types.html
@@ -377,7 +377,47 @@ pd 'show'
 </section>
 <section>
 	<h2>Hilo</h2>
-	<p><code>hilo</code>차트는 </p>
+	<p><code>hilo</code>차트는 <code>hi lo close</code> 세 개 행을 입력으로 받습니다. 예를 들어 주가 정보를 차트로 그릴 때 그날의 가장 높은 가격은 <code>hi</code>, 가장 낮은 가격은 <code>lo</code> 그리고 마감 시간 가격 <code>close</code>로 하면 매일의 시장 가격 움직임을 쉽게 이해할 수 있습니다.</p>
+
+	<p>아래 예제는 1996년 3월 독일 마르크 선물 가격의 <code>hilo</code>그래프입니다. <code>window driver</code>를 이용해 그래프의 크기를 지정하는 예제와 <code>hilo</code>의 예제가 섞여 있습니다.</p>
+	<figure class="fullwidth">
+        <img src="{{site.baseurl}}/assets/img/jlang/plot/hilo.png" alt="March 1996 Deutsche Mark Future"/>
+    </figure>
+
+	<pre class="code">
+require 'jzplot'
+
+stocks =: }. 'm' fread jpath '~addons/demos/wdplot/dm0396.txt'
+dat =: |: ".&> (< a:;2 3 4) { ','&cut"1 (- 100 <. # stocks) {. stocks
+
+plotwh =: 3 : 0
+480 360 plotwh y
+:
+wd 'pc myform'
+wd 'minwh ', ": x
+wd 'cc myplot isigraph flush'
+wd 'pas 0 0'
+
+loc =: ('myform'; 'myplot') conew 'jzplot'
+pd__loc 'type hilo'
+pd__loc 'color 35 139 69'
+pd__loc 'backcolor 255 255 248'
+pd__loc 'pensize 3'
+pd__loc y
+
+wd 'pshow'
+)
+
+myform_close =: 3 : 0
+wd 'pclose'
+destroy__loc ''
+)
+
+1800 600 plotwh dat
+
+	</pre>
+
+
 </section>
 <section>
 	<h2>Surface</h2>
