--- a/_posts/jlang/plot/2017-03-16-types.html
+++ b/_posts/jlang/plot/2017-03-16-types.html
@@ -179,7 +179,7 @@ wdata =: |. +/\ g0 , fs
 'type area; color MYCOLORS; backcolor BC; noaxes' plot (wmin , wmax, 0, 100)&map wdata
 
 	</pre>
-	<h3>D3 streamgraph</h3>
+	<h3>D3 Streamgraph</h3>
 	<p><code>qt webview</code>를 사용해 <code>d3.js</code>라이브러리를 네이티브로 실행할 수 있습니다. 자세한 내용은 <a href="{{ site.baseurl }}{% post_url /jlang/qt/2017-03-19-webview-and-d3 %}">링크</a>를 참조하세요.</p>
 </section>
 <section>
