--- a/_posts/jlang/plot/2017-03-16-types.html
+++ b/_posts/jlang/plot/2017-03-16-types.html
@@ -1,6 +1,7 @@
 ---
 layout: post
 title:  "Plot Types"
+subtitle: "J plot 패키지의 여러 타입을 그림과 함께 알아봅시다."
 date:   2017-03-16 12:00:00 +0900
 author: yunskim
 categories: jlang plot
