--- a/_posts/jlang/plot/2017-03-19-wd-and-plot.html
+++ b/_posts/jlang/plot/2017-03-19-wd-and-plot.html
@@ -1,3 +1,13 @@
+---
+layout: post
+title:  "Window Dirver를 이용해 Plot 사용하기" 
+subtitle: "QT 라이브러리를 이용해 plot과 GUI 프로그래밍을 연결해 봅시다."
+date:   2017-03-16 12:00:00 +0900
+author: yunskim
+categories: jlang plot
+permalink: /:categories/:title/
+---
+
 require 'jzplot'
 
 stocks =: }. 'm' fread jpath '~addons/demos/wdplot/dm0396.txt'
