--- a/_posts/vis/d3/2017-03-20-annotated-d3-streamgraph.html
+++ b/_posts/vis/d3/2017-03-20-annotated-d3-streamgraph.html
@@ -9,7 +9,7 @@ permalink: /:categories/:title/
 <figure class="fullwidth">
     <img src="{{site.baseurl}}/assets/img/vis/d3/streamgraph.png" alt="Streamgraph"/>
 </figure>
-<p><label for="surface-density-figure" class="margin-toggle">&#8853;</label><input type="checkbox" id="surface-density-figure" class="margin-toggle"/><span class="marginnote"><a href="https://bl.ocks.org/mbostock/4060954">Mike Bostock’s Block 4060954</a></span></p>
+<p><label for="streamgraph-figure" class="margin-toggle">&#8853;</label><input type="checkbox" id="streamgraph-figure" class="margin-toggle"/><span class="marginnote"><a href="https://bl.ocks.org/mbostock/4060954">Mike Bostock’s Block 4060954</a></span></p>
 <xmp class="code">
 <!DOCTYPE html>
 <meta charset="utf-8">
