--- a/_posts/vis/d3/2017-03-21-tutorial-line-chart.html
+++ b/_posts/vis/d3/2017-03-21-tutorial-line-chart.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "D3 video tutorial - line chart"
+title:  "D3 Video Tutorial - Line Chart"
 subtitle: "라인차트 그리기"
 date:   2017-03-21 12:00:00 +0900
 author: yunskim
